--- a/style.css
+++ b/style.css
@@ -12,9 +12,20 @@ body{
 }
 
 
-
-
-
+footer{
+    background-color: #191919;
+    color:#fff;
+    padding:18px 0;
+}
 	
+footer li{
+    list-style: none;
+    display: inline;
+    text-decoration: none ;
+}
 
-
+footer a{
+    text-decoration: none ;
+    color:wheat;
+    padding:5px;
+}
