--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 
 footer{
     background-color: #191919;
-    color:#fff;
+    color:rgb(14, 104, 26);
     padding:18px 0;
 }
 	
@@ -26,6 +26,6 @@ footer li{
 
 footer a{
     text-decoration: none ;
-    color:wheat;
+    color:rgb(14, 104, 26);
     padding:5px;
 }
